--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Alli Gombolay
+title: Alli Gombolay, M.P.H.
 ---
 <div class="blurb">
 	<h1>Alli Gombolay</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>I am a second year Bioinformatics Ph.D. student in the School of Biological Sciences at Georgia Tech</p>
 </div><!-- /.blurb -->
