--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Alli Gombolay, M.P.H.
+title: Alli Gombolay
 ---
 <div class="blurb">
-	<h1>Alli Gombolay</h1>
+	<h1>Alli Gombolay, M.P.H.</h1>
 	<p>I am a second year Bioinformatics Ph.D. student in the School of Biological Sciences at Georgia Tech</p>
 </div><!-- /.blurb -->
