--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Alli Gombolay
 ---
 <div class="blurb">
 	<h1>Alli Gombolay, M.P.H.</h1>
-	<p>I am a second year Bioinformatics Ph.D. student in the School of Biological Sciences at Georgia Tech</p>
+	<p>I am a second year Bioinformatics Ph.D. student in the School of Biological Sciences at Georgia Tech. My research focuses on mapping the incorporation of ribonucleotides embedded in DNA.</p>
 </div><!-- /.blurb -->
