--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@ title: Alli Gombolay
 ---
 <div class="blurb">
 	<h1>Alli Gombolay, M.P.H.</h1>
-	<p>I am a second year Bioinformatics Ph.D. student in the School of Biological Sciences at Georgia Tech. My research focuses on mapping the incorporation of ribonucleotides embedded in DNA.</p>
+	<p>Hello, my name is Alli Gombolay, and I am a second year Bioinformatics Ph.D. student in the School of
+	Biological Sciences at Georgia Tech.  I earned my B.S. in Biology (minor in Spanish) with Highest Honor
+	from Georgia Tech in 2013.  Afterward, I earned my M.P.H. in Epidemiology from Emory University in 2015.
+	My Ph.D. research focuses on mapping the incorporation of ribonucleotides embedded in DNA.</p>
 </div><!-- /.blurb -->
