--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@ title: Alli Gombolay
 ---
 <div class="blurb">
 	<h1>Alli Gombolay, M.P.H.</h1>
-	<p>Hello, my name is Alli Gombolay, and I am a second year Bioinformatics Ph.D. student in the School of
-	Biological Sciences at Georgia Tech.  I earned my B.S. in Biology (minor in Spanish) with Highest Honor
-	from Georgia Tech in 2013.  Afterward, I earned my M.P.H. in Epidemiology from Emory University in 2015.
-	My Ph.D. research focuses on mapping the incorporation of ribonucleotides embedded in DNA.</p>
+	<p align="justify">Hello, my name is Alli Gombolay, and I am a second year Bioinformatics Ph.D. student in the School of Biological Sciences at Georgia Tech.  I earned my B.S. in Biology (minor in Spanish) with Highest Honor from Georgia Tech in 2013.  Afterward, I earned my M.P.H. in Epidemiology from Emory University in 2015.</p>
+	<p align="justify">My Ph.D. research focuses on mapping the incorporation of ribonucleotides embedded in DNA.</p>
 </div><!-- /.blurb -->
