--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ title: Alli Gombolay
 ---
 <div class="blurb">
 	<h1>Alli Gombolay, M.P.H.</h1>
-	[Storici Lab] (http://www.storicilab.gatech.edu/) | [School of Biology] (http://www.biology.gatech.edu/)  
-	[Georgia Institute of Technology] (http://www.gatech.edu/)  
+	<a href="http://www.storicilab.gatech.edu/">Storici Lab</a>
+	<a href="http://www.biology.gatech.edu/">School of Biological Sciences</a>
+	<a href="http://www.gatech.edu/">Georgia Institute of Technology</a> 
 	Contact: alli.gombolay@gatech.edu
 	<p align="justify">Hello, my name is Alli Gombolay, and I am a second year Bioinformatics Ph.D. student in the School of Biological Sciences at Georgia Tech.  I earned my B.S. in Biology (minor in Spanish) with Highest Honor from Georgia Tech in 2013.  Afterward, I earned my M.P.H. in Epidemiology from Emory University in 2015.</p>
 	<p align="justify">My Ph.D. research focuses on mapping the incorporation of ribonucleotides (the subunits of RNA) that can become mistakenly embedded in DNA by DNA polymerases or as a result of oxidative stress.</p>
