--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ title: Alli Gombolay
 	<p>Contact: alli.gombolay@gatech.edu</p>
 	<p><a href="http://www.storicilab.gatech.edu/">Storici Lab</a> | <a href="http://www.biology.gatech.edu/">School of Biological Sciences</a> | <a href="http://www.gatech.edu/">Georgia Institute of Technology</a></p>
 	<p align="justify">Hello, my name is Alli Gombolay, and I am a second year Bioinformatics Ph.D. student in the Storici Lab in the School of Biological Sciences at Georgia Tech.  I earned my B.S. in Biology (minor in Spanish) with Highest Honor from Georgia Tech in 2013.  Afterward, I earned my M.P.H. in Epidemiology from Emory University in 2015.</p>
-	<p align="justify">My Ph.D. research focuses on mapping the incorporation of ribonucleotides (the subunits of RNA) that can become mistakenly embedded in DNA by DNA polymerases or as a result of oxidative stress. <a href="http://www.ncbi.nlm.nih.gov/pubmed/25622106)>Koh et al., Nature Methods 2015</a></p>
+	<p align="justify">My Ph.D. research focuses on mapping the incorporation of ribonucleotides (the subunits of RNA) that can become mistakenly embedded in DNA by DNA polymerases or as a result of oxidative stress.</p>
 </div><!-- /.blurb -->
