--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Alli Gombolay
 ---
 <div class="blurb">
 	<h1>Alli Gombolay, M.P.H.</h1>
-	<p>Contact: alli.gombolay@gatech.edu</p>
+	<p>Contact: alli.gombolay@gatech.edu | Engineered Biosystems Building (EBB1), Room 5107</p>
 	<p><a href="http://www.storicilab.gatech.edu/">Storici Lab</a> | <a href="http://www.biology.gatech.edu/">School of Biological Sciences</a> | <a href="http://www.gatech.edu/">Georgia Institute of Technology</a></p>
 	<p style="font-size:20px"<p align="justify">Hello, my name is Alli Gombolay, and I am a second year Bioinformatics Ph.D. student in the Storici Lab in the School of Biological Sciences at the Georgia Institute of Technology.  I earned my B.S. in Biology (minor in Spanish) with Highest Honor from Georgia Tech in 2013.  Afterward, I earned my M.P.H. in Epidemiology from Emory University in 2015.</p>
 	<p style="font-size:20px"<p align="justify">My Ph.D. research focuses on mapping the incorporation of ribonucleotides (rNMPs) (the subunits of RNA) in DNA.  rNMPs, which are the most prevalent non-standard nucleotide found in DNA, can become mistakenly incorporated into DNA during DNA replication and repair or formed as a result of DNA damage.  rNMPs in DNA can distort the double helix backbone of DNA, leading to genome instability and disease.  To study the distribution of rNMPs in the genome, the Storici Lab uses the <a href="http://www.ncbi.nlm.nih.gov/pubmed/25622106">"Ribose-seq" method (Koh et al. 2015, Nature Methods)</a> to capture single rNMPs embedded in DNA.</p>
