--- a/cv/index.html
+++ b/cv/index.html
@@ -4,5 +4,5 @@ title: Alli Gombolay
 ---
 <div class="blurb">
 	<h1>Alli Gombolay, M.P.H.</h1>
-	<p>Contact: alli.gombolay@gatech.edu</p>
+	<p>alli.gombolay@gatech.edu | Engineered Biosystems Building, Room 5107</p>
 </div><!-- /.blurb -->
