--- a/Links/index.html
+++ b/Links/index.html
@@ -1,1 +1,11 @@
+Georgia Tech Links
 
+Georgia Tech
+
+Georgia Tech Bioinformatics Program
+
+Georgia Tech School of Biology
+
+LinkedIn
+
+Alli's LinkedIn Profile
