--- a/Links/index.html
+++ b/Links/index.html
@@ -1,11 +1,18 @@
-Georgia Tech Links
+---
+layout: default
+title: Alli Gombolay
+---
+<div class="blurb">
+	<h1>Links</h1>
+  
+  <p>LinkedIn:
+  Alli's LinkedIn Profile
+	</p>
+	
+	<p>Georgia Tech Links:
+  Georgia Tech
+  Georgia Tech Bioinformatics Program
+  Georgia Tech School of Biological Sciences
+  </p>
 
-Georgia Tech
-
-Georgia Tech Bioinformatics Program
-
-Georgia Tech School of Biology
-
-LinkedIn
-
-Alli's LinkedIn Profile
+</div><!-- /.blurb -->
