--- a/Links/index.html
+++ b/Links/index.html
@@ -6,13 +6,13 @@ title: Alli Gombolay
 	<h1>Links</h1>
   
 	<p>LinkedIn:
-	Alli's LinkedIn Profile
+	<a href="https://www.linkedin.com/in/alli-gombolay-05b82738">Alli's LinkedIn Profile</a>
 	</p>
 	
 	<p>Georgia Tech Links:
-	Georgia Tech
-	Georgia Tech Bioinformatics Program
-	Georgia Tech School of Biological Sciences
+	<a href="http://www.gatech.edu/">Georgia Tech</a>
+	<a href="http://biosci.gatech.edu/">School of Biological Sciences</a>
+	<a href="http://www.bioinformatics.gatech.edu/">Georgia Tech Bioinformatics Program</a>
 	</p>
 
 </div><!-- /.blurb -->
