--- a/Links/index.html
+++ b/Links/index.html
@@ -10,9 +10,10 @@ title: Alli Gombolay
 	</p>
 	
 	<p>Georgia Tech Links:
-	<br><a href="http://www.gatech.edu/">Georgia Tech</a></br>
-	<br><a href="http://biosci.gatech.edu/">School of Biological Sciences</a></br>
-	<br><a href="http://www.bioinformatics.gatech.edu/">Georgia Tech Bioinformatics Program</a></br>
+	<ol>
+	<li><a href="http://www.gatech.edu/">Georgia Tech</a></li>
+	<li><a href="http://biosci.gatech.edu/">School of Biological Sciences</a></li>
+	<li><a href="http://www.bioinformatics.gatech.edu/">Georgia Tech Bioinformatics Program</a></li>
 	</p>
 
 </div><!-- /.blurb -->
