--- a/Links/index.html
+++ b/Links/index.html
@@ -6,7 +6,8 @@ title: Alli Gombolay
 	<h1>Links</h1>
   
 	<p>LinkedIn:
-	<br><a href="https://www.linkedin.com/in/alli-gombolay-05b82738">Alli's LinkedIn Profile</a></br>
+	<ul>
+		<li><a href="https://www.linkedin.com/in/alli-gombolay-05b82738">Alli's LinkedIn Profile</a></li>
 	</p>
 	
 	<p>Georgia Tech Links:
