--- a/Publications/index.html
+++ b/Publications/index.html
@@ -3,6 +3,5 @@ layout: default
 title: Alli Gombolay
 ---
 <div class="blurb">
-	<h1>Alli Gombolay, M.P.H.</h1>
-	<p>alli.gombolay@gatech.edu | Engineered Biosystems Building, Room 5107</p>
+	<h1>Publications</h1>
 </div><!-- /.blurb -->
