--- a/Links/index.html
+++ b/Links/index.html
@@ -7,7 +7,7 @@ title: Alli Gombolay
   
 	<p>LinkedIn:
 	<ul>
-		<li><a href="https://www.linkedin.com/in/alli-gombolay-05b82738">Alli's LinkedIn Profile</a></li>
+		<li><p style="font-size:20px"<a href="https://www.linkedin.com/in/alli-gombolay-05b82738">Alli's LinkedIn Profile</a></p></li>
 	</ul>
 	</p>
 	
