--- a/cv/index.html
+++ b/cv/index.html
@@ -5,4 +5,14 @@ title: Alli Gombolay
 <div class="blurb">
 	<h1>Alli Gombolay, M.P.H.</h1>
 	<p>alli.gombolay@gatech.edu | Engineered Biosystems Building, Room 5107</p>
+	
+	<h2>Education</h2>
+	<p>Ph.D. Student in Bioinformatics, Georgia Tech</p>
+	<p>Master of Public Health in Epidemiology, Emory University 2015</p>
+	<p>Bachelor of Science in Biology (minor in Spanish), Georgia Tech 2013</p>
+
+	<h2>Recent Awards</h2>
+	<p>Georgia Tech School of Biology Faculty Award, 2013</p>
+	<p>Georgia Tech Presidential Undergraduate Research Award, 2012</p>
+
 </div><!-- /.blurb -->
