--- a/cv/index.html
+++ b/cv/index.html
@@ -7,9 +7,9 @@ title: Alli Gombolay
 	<p>alli.gombolay@gatech.edu | Engineered Biosystems Building, Room 5107</p>
 	
 	<h2>Education</h2>
-	<p style="font-size:20px"Ph.D. Student in Bioinformatics, Georgia Tech</p>
-	<p style="font-size:20px"Master of Public Health in Epidemiology, Emory University 2015</p>
-	<p style="font-size:20px"Bachelor of Science in Biology (minor in Spanish), Georgia Tech 2013</p>
+	<p style="font-size:20px">Ph.D. Student in Bioinformatics, Georgia Tech</p>
+	<p style="font-size:20px">Master of Public Health in Epidemiology, Emory University 2015</p>
+	<p style="font-size:20px">Bachelor of Science in Biology (minor in Spanish), Georgia Tech 2013</p>
 
 	<h2>Recent Awards</h2>
 	<p>Georgia Tech School of Biology Faculty Award, 2013</p>
