--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@ title: Alli Gombolay
 	<p style="font-size:20px">Bachelor of Science in Biology (minor in Spanish), Georgia Tech 2013</p>
 
 	<h2>Recent Awards</h2>
-	<p>Georgia Tech School of Biology Faculty Award, 2013</p>
-	<p>Georgia Tech Presidential Undergraduate Research Award, 2012</p>
+	<p style="font-size:20px">Georgia Tech School of Biology Faculty Award, 2013</p>
+	<p style="font-size:20px">Georgia Tech Presidential Undergraduate Research Award, 2012</p>
 
 </div><!-- /.blurb -->
