--- a/cv/index.html
+++ b/cv/index.html
@@ -7,12 +7,13 @@ title: Alli Gombolay
 	<p>alli.gombolay@gatech.edu | Engineered Biosystems Building, Room 5107</p>
 	
 	<h2>Education</h2>
+	<ul>
 	<p style="font-size:20px">Ph.D. Student in Bioinformatics, Georgia Tech
 	<br>Master of Public Health in Epidemiology, Emory University 2015</br>
 	<br>Bachelor of Science in Biology (minor in Spanish), Georgia Tech 2013</br></p>
 
 	<h2>Recent Awards</h2>
-	<p style="font-size:20px">Georgia Tech School of Biology Faculty Award, 2013</p>
-	<p style="font-size:20px">Georgia Tech Presidential Undergraduate Research Award, 2012</p>
+	<p style="font-size:20px">Georgia Tech School of Biology Faculty Award, 2013
+	<br>Georgia Tech Presidential Undergraduate Research Award, 2012</br></p>
 
 </div><!-- /.blurb -->
