--- a/cv/index.html
+++ b/cv/index.html
@@ -8,7 +8,7 @@ title: Alli Gombolay
 	
 	<h2>Education</h2>
 	<ul>
-	<p style="font-size:20px">Ph.D. Student in Bioinformatics, Georgia Tech
+	<p style="font-size:20px"><br>Ph.D. Student in Bioinformatics, Georgia Tech</br>
 	<br>Master of Public Health in Epidemiology, Emory University 2015</br>
 	<br>Bachelor of Science in Biology (minor in Spanish), Georgia Tech 2013</br></p>
 
