--- a/cv/index.html
+++ b/cv/index.html
@@ -8,9 +8,9 @@ title: Alli Gombolay
 	
 	<h2>Education</h2>
 	<p style="font-size:20px">
-	Ph.D. Student in Bioinformatics, Georgia Tech
-	Master of Public Health in Epidemiology, Emory University 2015
-	Bachelor of Science in Biology (minor in Spanish), Georgia Tech 2013</p>
+	<br>Ph.D. Student in Bioinformatics, Georgia Tech
+	<br>Master of Public Health in Epidemiology, Emory University 2015
+	<br>Bachelor of Science in Biology (minor in Spanish), Georgia Tech 2013</p>
 
 	<h2>Recent Awards</h2>
 	<p style="font-size:20px">Georgia Tech School of Biology Faculty Award, 2013
