--- a/cv/index.html
+++ b/cv/index.html
@@ -16,5 +16,13 @@ title: Alli Gombolay
 	<p style="font-size:20px">
 	Georgia Tech School of Biology Faculty Award, 2013
 	<br>Georgia Tech Presidential Undergraduate Research Award, 2012</p>
+	
+	<h2>Teaching Experience</h2>
+	<p style="font-size:20px">
+	Teaching Assistant, School of Biological Sciences at Georgia Tech
+	Genetics Lecture (BIOL 2344), Summer 2016
+	Evolutionary Biology (BIOL 3600), Spring 2016
+	Genetics Laboratory (BIOL 2345), Fall 2015
 
+	
 </div><!-- /.blurb -->
