--- a/cv/index.html
+++ b/cv/index.html
@@ -20,9 +20,9 @@ title: Alli Gombolay
 	<h2>Teaching Experience</h2>
 	<p style="font-size:20px">
 	Teaching Assistant, School of Biological Sciences at Georgia Tech
-	Genetics Lecture (BIOL 2344), Summer 2016
-	Evolutionary Biology (BIOL 3600), Spring 2016
-	Genetics Laboratory (BIOL 2345), Fall 2015
+	<br>Genetics Lecture (BIOL 2344), Summer 2016
+	<br>Evolutionary Biology (BIOL 3600), Spring 2016
+	<br>Genetics Laboratory (BIOL 2345), Fall 2015</p>
 
 	
 </div><!-- /.blurb -->
