--- a/cv/index.html
+++ b/cv/index.html
@@ -17,9 +17,8 @@ title: Alli Gombolay
 	Georgia Tech School of Biology Faculty Award, 2013
 	<br>Georgia Tech Presidential Undergraduate Research Award, 2012</p>
 	
-	<h2>Teaching Experience</h2>
+	<h2>Teaching Assistant Experience</h2>
 	<p style="font-size:20px">
-	Teaching Assistant, School of Biological Sciences at Georgia Tech
 	<br>Genetics Lecture (BIOL 2344), Summer 2016
 	<br>Evolutionary Biology (BIOL 3600), Spring 2016
 	<br>Genetics Laboratory (BIOL 2345), Fall 2015</p>
