--- a/cv/index.html
+++ b/cv/index.html
@@ -19,7 +19,7 @@ title: Alli Gombolay
 	
 	<h2>Teaching Assistant Experience</h2>
 	<p style="font-size:20px">
-	<br>Genetics Lecture (BIOL 2344), Summer 2016
+	Genetics Lecture (BIOL 2344), Summer 2016
 	<br>Evolutionary Biology (BIOL 3600), Spring 2016
 	<br>Genetics Laboratory (BIOL 2345), Fall 2015</p>
 
