--- a/Publications/index.html
+++ b/Publications/index.html
@@ -1,9 +1,8 @@
-<body class="page5">
+<body class="main">
 
-.page5 #content {
+.main #content {
 
 body {
-    margin: 60px auto;
     width: 70%;
 }
 }
