--- a/cv/index.html
+++ b/cv/index.html
@@ -8,9 +8,9 @@ title: Alli Gombolay
 	
 	<h2>Education</h2>
 	<p style="font-size:20px">
-	Ph.D. Student in Bioinformatics, Georgia Institute of Technology
-	<br>Master of Public Health in Epidemiology, Rollins School of Public Health, Emory University 2015
-	<br>Bachelor of Science in Biology (minor in Spanish) with Highest Honor, Georgia Institute of Technology 2013</p>
+	Ph.D. Student in Bioinformatics, Georgia Institute of Technology, 2015-Present
+	<br>Master of Public Health in Epidemiology, Rollins School of Public Health, Emory University 2015,
+	<br>Bachelor of Science in Biology (minor in Spanish) with Highest Honor, Georgia Institute of Technology, 2013</p>
 
 	<h2>Recent Awards</h2>
 	<p style="font-size:20px">
