--- a/cv/index.html
+++ b/cv/index.html
@@ -14,8 +14,8 @@ title: Alli Gombolay
 
 	<h2>Recent Awards</h2>
 	<p style="font-size:20px">
-	Georgia Tech School of Biology Faculty Award, 2013
-	<br>Georgia Tech Presidential Undergraduate Research Award, 2012</p>
+	School of Biological Sciences Faculty Award, Georgia Institute of Technology, 2013
+	<br>Presidential Undergraduate Research Award, Georgia Institute of Technology, 2012</p>
 	
 	<h2>Teaching Assistant Experience</h2>
 	<p style="font-size:20px">
