--- a/Links/index.html
+++ b/Links/index.html
@@ -5,18 +5,18 @@ title: Alli Gombolay
 <div class="blurb">
 	<h1>Links</h1>
   
-	<p>LinkedIn:
+	<h2>LinkedIn:
 	<ul>
 		<li><a href="https://www.linkedin.com/in/alli-gombolay-05b82738">Alli's LinkedIn Profile</a></li>
 	</ul>
-	</p>
+	</h2>
 	
-	<p>Georgia Tech Links:
+	<h2>Georgia Tech Links:
 	<ul>
 		<li><a href="http://www.gatech.edu/">Georgia Tech</a></li>
 		<li><a href="http://biosci.gatech.edu/">School of Biological Sciences</a></li>
 		<li><a href="http://www.bioinformatics.gatech.edu/">Bioinformatics Graduate Program</a></li>
 	</ul>
-	</p>
+	</h2>
 
 </div><!-- /.blurb -->
