--- a/Links/index.html
+++ b/Links/index.html
@@ -5,18 +5,16 @@ title: Alli Gombolay
 <div class="blurb">
 	<h1>Links</h1>
   
-	<h2>LinkedIn:
+	<h2>LinkedIn:</h2>
 	<ul>
 		<li><a href="https://www.linkedin.com/in/alli-gombolay-05b82738">Alli's LinkedIn Profile</a></li>
 	</ul>
-	</h2>
 	
-	<h2>Georgia Tech Links:
+	<h2>Georgia Tech Links:</h2>
 	<ul>
 		<li><a href="http://www.gatech.edu/">Georgia Tech</a></li>
 		<li><a href="http://biosci.gatech.edu/">School of Biological Sciences</a></li>
 		<li><a href="http://www.bioinformatics.gatech.edu/">Bioinformatics Graduate Program</a></li>
 	</ul>
-	</h2>
 
 </div><!-- /.blurb -->
