--- a/Publications/index.html
+++ b/Publications/index.html
@@ -5,7 +5,7 @@ title: Alli Gombolay
 <div class="blurb">
 	<h1>Publications</h1>
 	<h2>M.P.H. in Epidemiology Thesis, Rollins School of Public Health, Emory University 2015</h2>
-	<p style="font-size:20px">Variation in receipt of adjuvant chemotherapy among breast cancer patients in Georgia utilizing augmented Georgia Cancer Registry data</p>
+	<p style="font-size:20px"><a href="https://etd.library.emory.edu/view/record/pid/emory:pk1xp">Variation in receipt of adjuvant chemotherapy among breast cancer patients in Georgia utilizing augmented Georgia Cancer Registry data</a></p>
 
 	<h2>B.S. in Biology Thesis, School of Biological Sciences, Georgia Institute of Technology 2013</h2>
 	<p style="font-size:20px">Ribonucleotides embedded in yeast genomic DNA are targets of RNase H2 and the nucleotide excision repair system</p>
