--- a/Links/index.html
+++ b/Links/index.html
@@ -12,9 +12,9 @@ title: Alli Gombolay
 	
 	<h2>Georgia Tech Links:</h2>
 	<ul>
-		<li><a href="http://www.gatech.edu/">Georgia Tech</a></li>
-		<li><a href="http://biosci.gatech.edu/">School of Biological Sciences</a></li>
-		<li><a href="http://www.bioinformatics.gatech.edu/">Bioinformatics Graduate Program</a></li>
+		<li><p style="font-size:20px"><a href="http://www.gatech.edu/">Georgia Tech</a></p></li>
+		<li><p style="font-size:20px"><a href="http://biosci.gatech.edu/">School of Biological Sciences</a></p></li>
+		<li><p style="font-size:20px"><a href="http://www.bioinformatics.gatech.edu/">Bioinformatics Graduate Program</a></p></li>
 	</ul>
 
 </div><!-- /.blurb -->
