--- a/Links/index.html
+++ b/Links/index.html
@@ -13,8 +13,8 @@ title: Alli Gombolay
 	<h2>Georgia Tech Links:</h2>
 	<ul>
 		<li><p style="font-size:20px"><a href="http://www.gatech.edu/">Georgia Tech</a></p></li>
-		<li><p style="font-size:20px"><a href="http://biosci.gatech.edu/">School of Biological Sciences</a></p></li>
-		<li><p style="font-size:20px"><a href="http://www.bioinformatics.gatech.edu/">Bioinformatics Graduate Program</a></p></li>
+		<br><li><p style="font-size:20px"><a href="http://biosci.gatech.edu/">School of Biological Sciences</a></p></li>
+		<br><li><p style="font-size:20px"><a href="http://www.bioinformatics.gatech.edu/">Bioinformatics Graduate Program</a></p></li>
 	</ul>
 
 </div><!-- /.blurb -->
