--- a/Links/index.html
+++ b/Links/index.html
@@ -10,11 +10,13 @@ title: Alli Gombolay
 		<li><p style="font-size:20px"><a href="https://www.linkedin.com/in/alli-gombolay-05b82738">Alli's LinkedIn Profile</a></p></li>
 	</ul>
 	
+	<br>
+	
 	<h2>Georgia Tech Links:</h2>
 	<ul>
 		<li><p style="font-size:20px"><a href="http://www.gatech.edu/">Georgia Tech</a></p></li>
-		<br><li><p style="font-size:20px"><a href="http://biosci.gatech.edu/">School of Biological Sciences</a></p></li>
-		<br><li><p style="font-size:20px"><a href="http://www.bioinformatics.gatech.edu/">Bioinformatics Graduate Program</a></p></li>
+		<li><p style="font-size:20px"><a href="http://biosci.gatech.edu/">School of Biological Sciences</a></p></li>
+		<li><p style="font-size:20px"><a href="http://www.bioinformatics.gatech.edu/">Bioinformatics Graduate Program</a></p></li>
 	</ul>
 
 </div><!-- /.blurb -->
