--- a/Publications/index.html
+++ b/Publications/index.html
@@ -4,7 +4,7 @@ title: Alli Gombolay
 ---
 <div class="blurb">
 	<h1>Publications</h1>
-	<h2>M.P.H. in Epidemiology Thesis, Rollins School of Public Health, Emory University 2015</h2>
+	<h2>Master of Public Health in Epidemiology Thesis, Rollins School of Public Health, Emory University 2015</h2>
 	<p style="font-size:20px"><a href="https://etd.library.emory.edu/view/record/pid/emory:pk1xp">Variation in receipt of adjuvant chemotherapy among breast cancer patients in Georgia utilizing augmented Georgia Cancer Registry data</a></p>
 
 	<br>
